# ml-deploy-test

./: pyproject.toml
.github/workflows/: train-model.yml
tests/: test_intent_classifier.py
tools/: intent_classifier.py
tools/confusion/: confusion-clf-v1.keras  confusion-clf-v1_config.yml
tools/macro_level/: macro_level-clf-v1.keras  macro_level-clf-v1_config.yml  macro_level_config.yml  macro_level_examples.yml  prepared_data__clair_api_ssrl.xlsx  treating_data.ipynb
wandb/: latest-run
wandb/run-20250708_133734-jw0piv1h/: run-jw0piv1h.wandb
wandb/run-20250708_133734-jw0piv1h/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250708_135949-nsepmzho/: run-nsepmzho.wandb
wandb/run-20250708_135949-nsepmzho/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250708_140608-ptm6s3zs/: run-ptm6s3zs.wandb
wandb/run-20250708_140608-ptm6s3zs/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250708_142012-cgxkecxo/: run-cgxkecxo.wandb
wandb/run-20250708_142012-cgxkecxo/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250708_142129-40dmpwg8/: run-40dmpwg8.wandb
wandb/run-20250708_142129-40dmpwg8/files/: config.yaml  wandb-metadata.json
wandb/run-20250708_142206-gg2vluq5/: run-gg2vluq5.wandb
wandb/run-20250708_142206-gg2vluq5/files/: config.yaml  wandb-metadata.json  (+1 more)
wandb/run-20250708_142346-pq0svp9f/: run-pq0svp9f.wandb
wandb/run-20250710_132711-alt5oj9r/: run-alt5oj9r.wandb
wandb/run-20250710_133435-ziif2gf3/: run-ziif2gf3.wandb
(+9 files in other folders)
