[project]
name = "mlops"
version = "0.1.0"
description = "Projeto da disciplina mlops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "fastjsonschema==2.21.1",
    "fire==0.7.0",
    "gunicorn>=23.0.0",
    "matplotlib==3.10.3",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pymongo==4.13.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "streamlit==1.45.1",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.16.2",
    "tensorflow-hub==0.16.1",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "tensorflow-text==2.16.1",
    "termcolor==3.1.0",
    "tf-keras==2.16.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "uvicorn[standard]==0.34.2",
    "wandb==0.19.11",
]
